// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`banner => Android < 4.4 1`] = `
<lego-components_link
  classname="banner banner_install"
  theme="dark"
>
  <span>
    Установить приложение
  </span>
</lego-components_link>
`;

exports[`banner => Android < 4.4 2`] = `
Array [
  "https://appmetrica.yandex.ru/serve/11718107456729729427?action=click&app_id=ru.yandex.disk&site_id=touch&creative_id=gradient",
  "_blank",
]
`;

exports[`banner => Android >= 4.4 (deep link) 1`] = `
<lego-components_link
  classname="banner banner_open"
  theme="dark"
>
  <span>
    Открыть в приложении
  </span>
</lego-components_link>
`;

exports[`banner => Android >= 4.4 (deep link) 2`] = `
Array [
  "https://redirect.appmetrica.yandex.com/serve/385561687492737009?public_link=https%3A%2F%2Fyadi.sk%2F",
  "_blank",
]
`;

exports[`banner => Android >= 4.4 для ссылок /mail/ (должен быть НЕ deep link) 1`] = `
<lego-components_link
  classname="banner banner_install"
  theme="dark"
>
  <span>
    Установить приложение
  </span>
</lego-components_link>
`;

exports[`banner => Android >= 4.4 для ссылок /mail/ (должен быть НЕ deep link) 2`] = `
Array [
  "https://appmetrica.yandex.ru/serve/11718107456729729427?action=click&app_id=ru.yandex.disk&site_id=touch&creative_id=gradient",
  "_blank",
]
`;

exports[`banner => Android >= 4.4 для ссылок /public/nda/ (должен быть НЕ deep link) 1`] = `
<lego-components_link
  classname="banner banner_install"
  theme="dark"
>
  <span>
    Установить приложение
  </span>
</lego-components_link>
`;

exports[`banner => Android >= 4.4 для ссылок /public/nda/ (должен быть НЕ deep link) 2`] = `
Array [
  "https://appmetrica.yandex.ru/serve/11718107456729729427?action=click&app_id=ru.yandex.disk&site_id=touch&creative_id=gradient",
  "_blank",
]
`;

exports[`banner => Windows Phone (не должно быть баннера) 1`] = `null`;

exports[`banner => iOS 1`] = `
<lego-components_link
  classname="banner banner_install"
  theme="dark"
>
  <span>
    Установить приложение
  </span>
</lego-components_link>
`;

exports[`banner => iOS 2`] = `
Array [
  "https://appmetrica.yandex.ru/serve/1168735115035726045?action=click&app_id=ru.yandex.disk&site_id=touch&creative_id=gradient",
  "_blank",
]
`;

exports[`banner => iOS(ChromeMobile) 1`] = `
<lego-components_link
  classname="banner banner_install"
  theme="dark"
>
  <span>
    Установить приложение
  </span>
</lego-components_link>
`;

exports[`banner => iOS(ChromeMobile) 2`] = `
Array [
  "https://appmetrica.yandex.ru/serve/1168735115035726045?action=click&app_id=ru.yandex.disk&site_id=touch&creative_id=gradient",
]
`;
